--- a/pages/estimation.html
+++ b/pages/estimation.html
@@ -1,19 +1,20 @@
 <!doctype html>
 <html lang="fr">
   <head>
-    <!-- Required meta tags -->
+    <!--  Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="NorImmo est le leader de la construction et de la rénovation de maisons individuelles en Normandie." >
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
-    <title>NorImmo</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>NorImmo | Estimation</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">NorImmo</a>
+      <a class="navbar-brand" href="../index.html">NorImmo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,41 +44,7 @@
     </header>
     <main class="container">
 
-    <form class="needs-validation" novalidate>
-      <div class="form-row">
-        <div class="col-md-3 mb-3">
-          <label for="lastname" class="font-weight-bold" id="name">Nom :</label>
-          <input type="text" class="form-control" id="lastname" placeholder="Votre nom" required>
-        </div>
-        <div class="col-md-3 mb-3">
-          <label for="firstname" class="font-weight-bold" id="name">Prénom :</label>
-          <input type="text" class="form-control" id="firstname" placeholder="Votre prénom" required>
-        </div>
-        <div class="col-md-3 mb-3">
-          <label for="number" class="font-weight-bold" id="number">Téléphone :</label>
-            <input type="tel" class="form-control" id="number" placeholder="Votre téléphone" required>
-        </div>
-        <div class="form-group col-md-2">
-          <label for="motif" class="font-weight-bold">Motif du message :</label>
-          <select id="motif" class="form-control">
-            <option selected>Devis</option>
-            <option>Information</option>
-            <option>Réclamation</option>
-          </select>
-        </div>
-        <div class="col-12 col-md-6 col-lg-6 offset-lg-3">
-        <div class="form-group">
-          <label for="messageArea" class="font-weight-bold">Message :</label>
-          <textarea class="form-control rounded-0" id="messageArea" rows="10" placeholder="Votre message"></textarea>
-        </div>
-        </div>
-      </div>
-      <button class="btn btn-primary col-12 col-md-6 col-lg-6 offset-lg-3" onclick="validateForm()">Envoi</button>
-    </form>
-    <div class="status"></div>
-
-
-      <p class="display-1">Travail Mathieu</p>
+      <p class="display-1">Travail Oliver</p>
 
     </main>
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
@@ -92,11 +59,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-    <script src="js/contact.js" ></script>
-
-    <script src="js/main.js" ></script>
-
+    <script src="../js/main.js" ></script>
   </body>
 </html>
-
