--- a/pages/questions.html
+++ b/pages/questions.html
@@ -9,12 +9,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <title>NorImmo | Accueil</title>
+    <title>NorImmo | FAQ</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">NorImmo</a>
+      <a class="navbar-brand" href="../index.html">NorImmo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link btn btn-warning" href="pages/estimation.html">Estimez votre bien<span class="sr-only">(current)</span></a>
+            <a class="nav-link btn btn-warning" href="estimation.html">Estimez votre bien<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/questions.html">Les questions</a>
+            <a class="nav-link" href="questions.html">Les questions</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/contact.html">Contactez-nous</a>
+            <a class="nav-link" href="contact.html">Contactez-nous</a>
           </li>
         </ul>
           <div id="logo">
@@ -44,7 +44,7 @@
     </header>
     <main class="container">
 
-      <p class="display-1">Travail KKevin</p>
+      <p class="display-1">Pas Travail</p>
 
     </main>
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
@@ -59,6 +59,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="js/main.js" ></script>
+    <script src="../js/main.js" ></script>
   </body>
 </html>
