--- a/pages/estimation.html
+++ b/pages/estimation.html
@@ -32,7 +32,7 @@
           </li>
         </ul>
           <div id="logo">
-            <img src="img/logo.png" alt="logo-entreprise">
+            <img src="../img/logo.png" alt="logo-entreprise">
           </div> 
       </div>
     </nav>
@@ -43,8 +43,44 @@
       </section>
     </header>
     <main class="container">
-
-      <p class="display-1">Travail Oliver</p>
+        
+        <div class="form-group my-5">
+            <label for="area-input">Quelle est la surface de votre projet (m²) ?</label>
+            <input type="number" class="form-control" id="area-input" placeholder="surface en m²">
+          </div>
+          <div class="form-group my-4">
+            <label for="bedroom-select">Combien aurez-vous de chambres ?</label>
+            <select class="form-control" id="bedroom-select">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+              <option>10</option>
+            </select>
+          </div>
+          <label class="radio-inline control-label mr-3">Le matériau choisi :</label>
+          <div class="form-check form-check-inline my-4">
+              <input class="form-check-input" type="radio" name="material-radio" id="material-radio1" value="option1">
+              <label class="form-check-label" for="material-radio1">parpaing</label>
+          </div>
+          <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="material-radio" id="material-radio2" value="option2">
+              <label class="form-check-label" for="material-radio2">bois</label>
+          </div>
+          <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="material-radio" id="material-radio3" value="option3">
+              <label class="form-check-label" for="material-radio3">brique</label>
+          </div>
+      </form>
+        <div class="calculation  my-4">
+          <button type="button" class="btn btn-primary btn-lg mr-4" id="estimate-button">Estimer</button>
+          <span id="estimate-span" class="text-warning">dfdfd</span>
+        </div>
 
     </main>
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
@@ -59,6 +95,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="../js/main.js" ></script>
+    <script src="../js/estimation.js" ></script>
   </body>
 </html>
