Make questions page structure and styles with Bootstrap

--- a/pages/questions.html
+++ b/pages/questions.html
@@ -43,9 +43,33 @@
       </section>
     </header>
     <main class="container">
-
-      <p class="display-1">Pas Travail</p>
-
+      <article class="card">
+        <div class="card-header d-flex justify-content-between bg-primary text-white">
+            <h3>Question 1</h3>
+            <span style="font-size:2rem;">+</span>
+        </div>
+        <div class="card-body d-none">
+            <p class="card-text">Integer nulla massa, hendrerit et lorem nec, sollicitudin aliquet neque. Nullam eget justo laoreet nulla rutrum euismod malesuada a tellus. Pellentesque magna purus, ornare sed imperdiet sit amet, sollicitudin id lectus.</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="card-header d-flex justify-content-between bg-primary text-white">
+            <h3>Question 2</h3>
+            <span style="font-size:2rem;">+</span>
+        </div>
+        <div class="card-body d-none">
+            <p class="card-text">Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.</p>
+        </div>
+      </article>
+      <article class="card">
+        <div class="card-header d-flex justify-content-between bg-primary text-white">
+            <h3>Question 3</h3>
+            <span style="font-size:2rem;">+</span>
+        </div>
+        <div class="card-body d-none">
+            <p class="card-text">Mauris suscipit suscipit lacinia. Nulla eu egestas magna. In hac habitasse platea dictumst. </p>
+        </div>
+      </article>    
     </main>
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
       <section class="container">
@@ -59,6 +83,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src="../js/main.js" ></script>
+    <script src="../js/question.js" ></script>
   </body>
 </html>
