--- a/pages/questions.html
+++ b/pages/questions.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>NorImmo | FAQ</title>
   </head>
 
@@ -32,7 +32,7 @@
           </li>
         </ul>
           <div id="logo">
-            <img src="img/logo.png" alt="logo-entreprise">
+            <img src="../img/logo.png" alt="logo-entreprise">
           </div> 
       </div>
     </nav>
