--- a/pages/questions.html
+++ b/pages/questions.html
@@ -42,35 +42,37 @@
         <p class="text-center">Leader de la construction et de la rénovation de maisons individuelles en Normandie.</p>
       </section>
     </header>
-    <main class="container">
-      <article class="card">
-        <div class="card-header d-flex justify-content-between bg-primary text-white">
+      <main>
+        <div class="wrapper w-75 mx-auto">
+        <article class="card">
+          <div class="card-header d-flex justify-content-between bg-primary text-white">
             <h3>Question 1</h3>
             <span style="font-size:2rem;">+</span>
-        </div>
-        <div class="card-body d-none">
-            <p class="card-text">Integer nulla massa, hendrerit et lorem nec, sollicitudin aliquet neque. Nullam eget justo laoreet nulla rutrum euismod malesuada a tellus. Pellentesque magna purus, ornare sed imperdiet sit amet, sollicitudin id lectus.</p>
-        </div>
-      </article>
-      <article class="card">
-        <div class="card-header d-flex justify-content-between bg-primary text-white">
+          </div>
+          <div class="my-card-body" style="height: 0px; overflow: hidden; transition: height 0.5s ease-out">
+            <p class="card-text p-3">Integer nulla massa, hendrerit et lorem nec, sollicitudin aliquet neque. Nullam eget justo laoreet nulla rutrum euismod malesuada a tellus. Pellentesque magna purus, ornare sed imperdiet sit amet, sollicitudin id lectus. Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.</p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-header d-flex justify-content-between bg-primary text-white">
             <h3>Question 2</h3>
             <span style="font-size:2rem;">+</span>
-        </div>
-        <div class="card-body d-none">
-            <p class="card-text">Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.</p>
-        </div>
-      </article>
-      <article class="card">
-        <div class="card-header d-flex justify-content-between bg-primary text-white">
+          </div>
+          <div class="my-card-body" style="height: 0px; overflow: hidden; transition: height 0.5s ease-out">
+            <p class="card-text p-3">Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.Integer nulla massa, hendrerit et lorem nec, sollicitudin aliquet neque. Nullam eget justo laoreet nulla rutrum euismod malesuada a tellus. Pellentesque magna purus, ornare sed imperdiet sit amet, sollicitudin id lectus. Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.</p>
+          </div>
+        </article>
+        <article class="card">
+          <div class="card-header d-flex justify-content-between bg-primary text-white">
             <h3>Question 3</h3>
             <span style="font-size:2rem;">+</span>
+          </div>
+          <div class="my-card-body" style="height: 0px; overflow: hidden; transition: height 0.5s ease-out">
+            <p class="card-text p-3">Mauris suscipit suscipit lacinia. Nulla eu egestas magna. In hac habitasse platea dictumst. Vivamus volutpat nulla sed urna faucibus suscipit. Pellentesque nec dui volutpat, bibendum orci eget, lobortis magna. Sed tincidunt eros quis urna faucibus tincidunt. In feugiat ex at nisi imperdiet posuere.</p>
+          </div>
+        </article>
         </div>
-        <div class="card-body d-none">
-            <p class="card-text">Mauris suscipit suscipit lacinia. Nulla eu egestas magna. In hac habitasse platea dictumst. </p>
-        </div>
-      </article>    
-    </main>
+      </main>
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
       <section class="container">
         <h5>Tout droits reservés</h5>
