Add event with addEventListener on carousel

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
       <div id="slider">
         <img src="img/maison1.jpg" alt="image de maison" id="img">
-        <div id="precedent" onclick="ChangeSlide(-1)"><</div>
-        <div id="suivant" onclick="ChangeSlide(1)">></div>
+        <div id="precedent"><</div>
+        <div id="suivant" >></div>
       </div>
       <h2 class="mt-5">Qui sommes nous ?</h2>
       <p>L’entreprise Norimmo 15 ans d’expérience, est un constructeur de maisons individuelles à la qualité reconnue et gère de a à z votre projet de construction de maison, de rénovation de maison individuelle ou appartement à Paris et toute la région normande, 76 Seine Maritime, 27 Eure.</p>
