--- a/pages/contact.html
+++ b/pages/contact.html
@@ -75,7 +75,7 @@
           </div>
         </div>
       </form>
-      <button class="btn btn-primary col-12 col-md-6 col-lg-6 offset-lg-3" id="submit" onclick="submit()">Envoi</button>
+      <button class="btn btn-primary col-12 col-md-6 col-lg-6" id="submit" onclick="submit()">Envoi</button>
     </main>
 
     <footer class="jumbotron jumbotron-fluid mt-5 mb-0">
